hoc: execute blocker wave W2 and record PIN-602

--- a/docs/capabilities/CAPABILITY_REGISTRY.yaml
+++ b/docs/capabilities/CAPABILITY_REGISTRY.yaml
@@ -666,6 +666,31 @@ capabilities:
         - "/backend/app/hoc/int/agent/engines/service.py"
         - "/backend/app/hoc/int/agent/engines/validator_engine.py"
 
+        - "/backend/app/hoc/int/agent/__init__.py"
+        - "/backend/app/hoc/int/agent/drivers/__init__.py"
+        - "/backend/app/hoc/int/agent/drivers/copy.py"
+        - "/backend/app/hoc/int/agent/drivers/db.py"
+        - "/backend/app/hoc/int/agent/drivers/event_emitter.py"
+        - "/backend/app/hoc/int/agent/drivers/feature_intent.py"
+        - "/backend/app/hoc/int/agent/drivers/generator.py"
+        - "/backend/app/hoc/int/agent/drivers/llm_invoke_governed.py"
+        - "/backend/app/hoc/int/agent/drivers/panel_capability_resolver.py"
+        - "/backend/app/hoc/int/agent/drivers/panel_consistency_checker.py"
+        - "/backend/app/hoc/int/agent/drivers/panel_types.py"
+        - "/backend/app/hoc/int/agent/drivers/research.py"
+        - "/backend/app/hoc/int/agent/drivers/semantic_types.py"
+        - "/backend/app/hoc/int/agent/drivers/skill_registry_filter.py"
+        - "/backend/app/hoc/int/agent/drivers/tenant_config.py"
+        - "/backend/app/hoc/int/agent/drivers/transaction.py"
+        - "/backend/app/hoc/int/agent/drivers/ux.py"
+        - "/backend/app/hoc/int/agent/drivers/validator.py"
+        - "/backend/app/hoc/int/agent/drivers/worker_write_driver_async.py"
+        - "/backend/app/hoc/int/agent/facades/__init__.py"
+        - "/backend/app/hoc/int/agent/facades/claude_adapter.py"
+        - "/backend/app/hoc/int/agent/facades/openai_adapter.py"
+        - "/backend/app/hoc/int/agent/schemas/__init__.py"
+        - "/backend/app/hoc/int/agent/schemas/schema.py"
+        - "/backend/app/hoc/int/agent/schemas/semantic_failures.py"
     gaps: []  # No gaps - CLOSED (internal capability)
 
   # ---------------------------------------------------------------------------
@@ -1143,6 +1168,72 @@ capabilities:
         - "/backend/app/hoc/cus/hoc_spine/utilities/__init__.py"
         - "/backend/app/hoc/cus/hoc_spine/utilities/recovery_decisions.py"
         - "/backend/app/hoc/cus/hoc_spine/utilities/s1_retry_backoff.py"
+        - "/backend/app/hoc/int/platform/drivers/__init__.py"
+        - "/backend/app/hoc/int/platform/drivers/canonicalize.py"
+        - "/backend/app/hoc/int/platform/drivers/checkpoint.py"
+        - "/backend/app/hoc/int/platform/drivers/console_modes.py"
+        - "/backend/app/hoc/int/platform/drivers/cost_tracker.py"
+        - "/backend/app/hoc/int/platform/drivers/drift_detector.py"
+        - "/backend/app/hoc/int/platform/drivers/embedding_cache.py"
+        - "/backend/app/hoc/int/platform/drivers/embedding_metrics.py"
+        - "/backend/app/hoc/int/platform/drivers/emitters.py"
+        - "/backend/app/hoc/int/platform/drivers/error_envelope.py"
+        - "/backend/app/hoc/int/platform/drivers/error_store.py"
+        - "/backend/app/hoc/int/platform/drivers/events.py"
+        - "/backend/app/hoc/int/platform/drivers/executor.py"
+        - "/backend/app/hoc/int/platform/drivers/external_response_driver.py"
+        - "/backend/app/hoc/int/platform/drivers/failure_catalog.py"
+        - "/backend/app/hoc/int/platform/drivers/feedback.py"
+        - "/backend/app/hoc/int/platform/drivers/flag_sync.py"
+        - "/backend/app/hoc/int/platform/drivers/golden.py"
+        - "/backend/app/hoc/int/platform/drivers/governance.py"
+        - "/backend/app/hoc/int/platform/drivers/governor.py"
+        - "/backend/app/hoc/int/platform/drivers/iaec.py"
+        - "/backend/app/hoc/int/platform/drivers/interface.py"
+        - "/backend/app/hoc/int/platform/drivers/job_execution.py"
+        - "/backend/app/hoc/int/platform/drivers/job_scheduler.py"
+        - "/backend/app/hoc/int/platform/drivers/learning.py"
+        - "/backend/app/hoc/int/platform/drivers/logging_context.py"
+        - "/backend/app/hoc/int/platform/drivers/observability_provider.py"
+        - "/backend/app/hoc/int/platform/drivers/override_resolver.py"
+        - "/backend/app/hoc/int/platform/drivers/planner_sandbox.py"
+        - "/backend/app/hoc/int/platform/drivers/platform_health_driver.py"
+        - "/backend/app/hoc/int/platform/drivers/retriever.py"
+        - "/backend/app/hoc/int/platform/drivers/routing_models.py"
+        - "/backend/app/hoc/int/platform/drivers/sandbox_executor.py"
+        - "/backend/app/hoc/int/platform/drivers/secrets.py"
+        - "/backend/app/hoc/int/platform/drivers/stub_planner.py"
+        - "/backend/app/hoc/int/platform/drivers/suggestions.py"
+        - "/backend/app/hoc/int/platform/drivers/update_rules.py"
+        - "/backend/app/hoc/int/platform/drivers/vector_store.py"
+        - "/backend/app/hoc/int/platform/engines/__init__.py"
+        - "/backend/app/hoc/int/platform/engines/config.py"
+        - "/backend/app/hoc/int/platform/engines/customer_sandbox.py"
+        - "/backend/app/hoc/int/platform/engines/engine.py"
+        - "/backend/app/hoc/int/platform/engines/errors.py"
+        - "/backend/app/hoc/int/platform/engines/evaluator.py"
+        - "/backend/app/hoc/int/platform/engines/external_guard.py"
+        - "/backend/app/hoc/int/platform/engines/failure_intelligence.py"
+        - "/backend/app/hoc/int/platform/engines/health.py"
+        - "/backend/app/hoc/int/platform/engines/kill_switch_guard.py"
+        - "/backend/app/hoc/int/platform/engines/m10_metrics_collector.py"
+        - "/backend/app/hoc/int/platform/engines/metrics.py"
+        - "/backend/app/hoc/int/platform/engines/platform_health_engine.py"
+        - "/backend/app/hoc/int/platform/engines/pool_manager.py"
+        - "/backend/app/hoc/int/platform/engines/replay.py"
+        - "/backend/app/hoc/int/platform/engines/s1_rollback.py"
+        - "/backend/app/hoc/int/platform/engines/state_resolver.py"
+        - "/backend/app/hoc/int/platform/engines/tables.py"
+        - "/backend/app/hoc/int/platform/facades/anthropic_adapter.py"
+        - "/backend/app/hoc/int/platform/facades/platform_eligibility_adapter.py"
+        - "/backend/app/hoc/int/platform/facades/stub_adapter.py"
+        - "/backend/app/hoc/int/platform/governance/drivers/governance_signal_driver.py"
+        - "/backend/app/hoc/int/platform/iam/__init__.py"
+        - "/backend/app/hoc/int/platform/iam/engines/__init__.py"
+        - "/backend/app/hoc/int/platform/iam/engines/iam_engine.py"
+        - "/backend/app/hoc/int/platform/policy/__init__.py"
+        - "/backend/app/hoc/int/platform/policy/engines/__init__.py"
+        - "/backend/app/hoc/int/platform/policy/engines/policy_driver.py"
     gaps: []  # No gaps - CLOSED
 
   # ---------------------------------------------------------------------------
