governance: execute HOC blocker queue W3 (int general/worker/policies)

--- a/docs/capabilities/CAPABILITY_REGISTRY.yaml
+++ b/docs/capabilities/CAPABILITY_REGISTRY.yaml
@@ -506,6 +506,34 @@ capabilities:
         - "/backend/app/hoc/int/general/engines/invariants.py"
         - "/backend/app/hoc/int/general/engines/route_planes.py"
         - "/backend/app/hoc/int/integrations/engines/gateway_middleware.py"
+        - "/backend/app/hoc/int/general/drivers/__init__.py"
+        - "/backend/app/hoc/int/general/drivers/actor.py"
+        - "/backend/app/hoc/int/general/drivers/db_async.py"
+        - "/backend/app/hoc/int/general/drivers/enforcement_guard.py"
+        - "/backend/app/hoc/int/general/drivers/execution_envelope.py"
+        - "/backend/app/hoc/int/general/drivers/hallucination_hook.py"
+        - "/backend/app/hoc/int/general/drivers/health.py"
+        - "/backend/app/hoc/int/general/drivers/idempotency.py"
+        - "/backend/app/hoc/int/general/drivers/invocation_safety.py"
+        - "/backend/app/hoc/int/general/drivers/m7_to_m28.py"
+        - "/backend/app/hoc/int/general/drivers/metrics.py"
+        - "/backend/app/hoc/int/general/drivers/redis_publisher.py"
+        - "/backend/app/hoc/int/general/drivers/step_enforcement.py"
+        - "/backend/app/hoc/int/general/drivers/subscribers.py"
+        - "/backend/app/hoc/int/general/drivers/vault_client.py"
+        - "/backend/app/hoc/int/general/engines/auth.py"
+        - "/backend/app/hoc/int/general/engines/authorization.py"
+        - "/backend/app/hoc/int/general/engines/authorization_choke.py"
+        - "/backend/app/hoc/int/general/engines/authorization_metrics.py"
+        - "/backend/app/hoc/int/general/engines/contracts.py"
+        - "/backend/app/hoc/int/general/engines/core.py"
+        - "/backend/app/hoc/int/general/engines/gateway_metrics.py"
+        - "/backend/app/hoc/int/general/engines/identity_chain.py"
+        - "/backend/app/hoc/int/general/engines/invocation_context.py"
+        - "/backend/app/hoc/int/general/engines/memory_update.py"
+        - "/backend/app/hoc/int/general/engines/rbac_rules_loader.py"
+        - "/backend/app/hoc/int/general/engines/retrieval_hook.py"
+        - "/backend/app/hoc/int/general/engines/skill_http.py"
       l2_api:
         - "/backend/app/auth/gateway_middleware.py"  # FastAPI middleware
         - "/backend/app/auth/gateway_config.py"      # Gateway initialization
@@ -817,6 +845,28 @@ capabilities:
         - "/backend/app/hoc/cus/policies/L5_engines/state.py"
         - "/backend/app/hoc/cus/policies/L5_engines/dsl_parser.py"
         - "/backend/app/hoc/cus/policies/L5_engines/runtime_command.py"
+        - "/backend/app/hoc/int/policies/L5_engines/limit_enforcer.py"
+        - "/backend/app/hoc/int/policies/L5_engines/limit_enforcer_contract.py"
+        - "/backend/app/hoc/int/policies/L5_engines/usage_monitor.py"
+        - "/backend/app/hoc/int/policies/L5_engines/usage_monitor_contract.py"
+        - "/backend/app/hoc/int/policies/drivers/boot_guard.py"
+        - "/backend/app/hoc/int/policies/drivers/brand.py"
+        - "/backend/app/hoc/int/policies/drivers/execution_context.py"
+        - "/backend/app/hoc/int/policies/drivers/execution_plan.py"
+        - "/backend/app/hoc/int/policies/drivers/publisher.py"
+        - "/backend/app/hoc/int/policies/drivers/query_authority.py"
+        - "/backend/app/hoc/int/policies/drivers/step_enforcement_hook.py"
+        - "/backend/app/hoc/int/policies/drivers/storage.py"
+        - "/backend/app/hoc/int/policies/drivers/strategy.py"
+        - "/backend/app/hoc/int/policies/drivers/usage_record_driver.py"
+        - "/backend/app/hoc/int/policies/engines/__init__.py"
+        - "/backend/app/hoc/int/policies/engines/graduation_evaluator.py"
+        - "/backend/app/hoc/int/policies/engines/job_queue_worker.py"
+        - "/backend/app/hoc/int/policies/engines/limit_hook.py"
+        - "/backend/app/hoc/int/policies/engines/policy_checker.py"
+        - "/backend/app/hoc/int/policies/engines/rbac.py"
+        - "/backend/app/hoc/int/policies/engines/recovery_claim_worker.py"
+        - "/backend/app/hoc/int/policies/engines/recovery_queue_stream.py"
       l2_api:
         - "/backend/app/api/policy.py"
         - "/backend/app/api/policy_layer.py"
@@ -1234,6 +1284,34 @@ capabilities:
         - "/backend/app/hoc/int/platform/policy/__init__.py"
         - "/backend/app/hoc/int/platform/policy/engines/__init__.py"
         - "/backend/app/hoc/int/platform/policy/engines/policy_driver.py"
+        - "/backend/app/hoc/int/worker/__init__.py"
+        - "/backend/app/hoc/int/worker/enforcement/__init__.py"
+        - "/backend/app/hoc/int/worker/enforcement/enforcement_guard.py"
+        - "/backend/app/hoc/int/worker/enforcement/step_enforcement.py"
+        - "/backend/app/hoc/int/worker/hooks/__init__.py"
+        - "/backend/app/hoc/int/worker/hooks/hallucination_hook.py"
+        - "/backend/app/hoc/int/worker/hooks/limit_hook.py"
+        - "/backend/app/hoc/int/worker/hooks/retrieval_hook.py"
+        - "/backend/app/hoc/int/worker/hooks/step_enforcement_hook.py"
+        - "/backend/app/hoc/int/worker/idempotency.py"
+        - "/backend/app/hoc/int/worker/job_queue_worker.py"
+        - "/backend/app/hoc/int/worker/kill_switch_guard.py"
+        - "/backend/app/hoc/int/worker/lifecycle_worker.py"
+        - "/backend/app/hoc/int/worker/observability_guard.py"
+        - "/backend/app/hoc/int/worker/orchestration/__init__.py"
+        - "/backend/app/hoc/int/worker/orchestration/phases.py"
+        - "/backend/app/hoc/int/worker/orchestration/run_orchestration_kernel.py"
+        - "/backend/app/hoc/int/worker/outbox_processor.py"
+        - "/backend/app/hoc/int/worker/policy_checker.py"
+        - "/backend/app/hoc/int/worker/pool.py"
+        - "/backend/app/hoc/int/worker/recovery_claim_worker.py"
+        - "/backend/app/hoc/int/worker/recovery_evaluator.py"
+        - "/backend/app/hoc/int/worker/runner.py"
+        - "/backend/app/hoc/int/worker/runtime/__init__.py"
+        - "/backend/app/hoc/int/worker/runtime/contracts.py"
+        - "/backend/app/hoc/int/worker/runtime/core.py"
+        - "/backend/app/hoc/int/worker/runtime/integrated_runtime.py"
+        - "/backend/app/hoc/int/worker/simulate.py"
     gaps: []  # No gaps - CLOSED
 
   # ---------------------------------------------------------------------------
